--- a/BdHorasZero/Views/Home/Index.cshtml
+++ b/BdHorasZero/Views/Home/Index.cshtml
@@ -10,10 +10,11 @@
 <div class="text-center">
 	<h1 class="display-4">Olá</h1>
 	<p><a asp-controller="Gestores" asp-action="CadastrarGrupoGestores">Gestores - primeiro acesso (CadastrarGrupoGestores)</a></p>
-	<p><a asp-controller="Vinculos" asp-action="MontarGrupo">Vinculos - Montagem de Grupos - (MontarGrupo)</a></p>
-	<p><a asp-controller="Gestores" asp-action="Index">Gestores - cadastrado, e Grupo montado - (Index)</a></p>
 
-	<p><a asp-controller="Gestores" asp-action="EditarGrupoGestores">Gestores - Edição de Grupos - (EditarGrupoGestores)</a></p>
+	<p><a asp-controller="Vinculos" asp-action="MontarGrupo">Vinculos - Montagem de Grupos - (MontarGrupo)</a></p>
+	<p><a asp-controller="Vinculos" asp-action="EditarGrupo">Vinculos - Edição de Grupos - (EditarGrupo)</a></p>
+
+	<p><a asp-controller="Gestores" asp-action="Index">Gestores - cadastrado, e Grupo montado - (Index)</a></p>
 	<p><a asp-controller="Gestores" asp-action="DetalhesFuncionario">Gestores - Detalhes Individuais do Funcionário - (DetalhesFuncionario)</a></p>
 	<p><a asp-controller="Gestores" asp-action="NovoApontamento">Gestores - Novo Apontamento - (NovoApontamento)</a></p>
 
