Adicionado UTC -3 em ApplicationDbContext

--- a/BdHorasZero/Views/Vinculos/EditarGrupo.cshtml
+++ b/BdHorasZero/Views/Vinculos/EditarGrupo.cshtml
@@ -46,7 +46,7 @@
                     <!-- obs: a linha abaixo fazia o modal surgir mesmo adicionando o funcionário. Motivo: "data-bs-toggle..."-->
                     @* <a class="btn btn-primary" role="button" id="adicionarBtn" data-bs-toggle="modal" data-bs-target="#modalAviso">Adicionar</a> *@
                     @* <a class="btn btn-primary" role="button" id="adicionarBtn" data-bs-target="#modalAviso">Adicionar</a> *@
-                    <a class="btn btn-primary" role="button" id="" asp-controller="Gestores" asp-action="CadastrarGrupoGestores">Renomear Grupo</a>
+                    <a class="btn btn-secondary" role="button" id="" asp-controller="Gestores" asp-action="CadastrarGrupoGestores">Renomear Grupo</a>
                     <a class="btn btn-primary" role="button" id="" asp-controller="Vinculos" asp-action="AdicionarNovoFuncionario">Adicionar Funcionários</a>
                     <a class="btn btn-danger" role="button" id="" asp-controller="Vinculos" asp-action="RemoverFuncionario">Remover Funcionários</a>
                     <a class="btn btn-danger" role="button" id="" asp-controller="Home" asp-action="Index">Cancelar</a>
