--- a/BdHorasZero/Views/Vinculos/ConfirmarRemoverFuncionario.cshtml
+++ b/BdHorasZero/Views/Vinculos/ConfirmarRemoverFuncionario.cshtml
@@ -1,6 +1,4 @@
-﻿@* @model BdHorasZero.Models.ViewModels.GrupoViewModel *@
-
-@model FuncionariosModel
+﻿@model FuncionariosModel
 
 <div class="d-flex justify-content-center">
     <div class="col-12 col-sm-11 col-md-10 col-lg-7 col-xl-6">
