Quebrando ao renomear o grupo

--- a/BdHorasZero/Views/Vinculos/EditarGrupoSinglePage.cshtml
+++ b/BdHorasZero/Views/Vinculos/EditarGrupoSinglePage.cshtml
@@ -28,7 +28,7 @@
                 <div class="d-flex justify-content-between">
                     <div class="text-start fs-3">@gestor.NomeGrupo</div>
                     <div class="text-end">
-                        <a class="btn btn-primary" role="button" asp-controller="Gestores" asp-action="CadastrarGrupoGestores">Renomear Grupo</a></div>
+                        <a class="btn btn-primary" role="button" asp-controller="Gestores" asp-action="RenomearGrupo">Renomear Grupo</a></div>
                 </div>
 
 
